<resources>
    <string name="app_name">NBA app</string>
    <string name="teama">Toronto Raptors</string>
    <string name="teamb">Minnesota Wolves</string>
    <string name="Score">0</string>
    <string name="three">+3 Points</string>
    <string name="two">+2 Points</string>
    <string name="freeThrow">Free Throw</string>
    <string name="reset">RESET</string>
    <string name="timer">00:00</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="log">Login</string>
</resources>
