<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.nbaapp.Main2Activity"
    android:background="@drawable/blogin">

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_shape"
        android:drawableLeft="@drawable/ic_action_name"
        android:paddingStart="@dimen/paddingleft"
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:paddingLeft="@dimen/paddingleft" />

    <EditText
        android:id="@+id/editTextpass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="95dp"
        android:background="@drawable/button_shape"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:paddingStart="@dimen/paddingleft"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/paddingleft" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/editTextpass"
        android:layout_alignStart="@+id/editTextpass"
        android:layout_below="@+id/editTextpass"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_log"
        android:hint="@string/log"
        android:textColorHint="@color/White"
        android:textColor="@color/White"
        android:ems="10"
        android:textSize="20sp" />
</RelativeLayout>
