<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.android.nbaapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:padding="@dimen/play_pause_padding">

        <Button
            android:id="@+id/button_start"
            android:layout_width="@dimen/play_pause"
            android:layout_height="@dimen/play_pause"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/play" />

        <TextView
            android:id="@+id/text_view_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/timer"
            android:textColor="@color/GreyLight"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button_pause"
            android:layout_width="@dimen/play_pause"
            android:layout_height="@dimen/play_pause"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/pause"
            android:gravity="center" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_h_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/teama"
                android:textColor="@color/White"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/darker_gray" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_logoA"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_gravity="center"
                android:src="@drawable/raptors" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:text="@string/Score"
                android:textColor="@color/White"
                android:textSize="56sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/button_shape"
                android:onClick="addTreeforTeamA"
                android:text="@string/three" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/button_shape"
                android:onClick="addTwoforTeamA"
                android:text="@string/two" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/button_shape"
                android:onClick="addOneforTeamA"
                android:text="@string/freeThrow" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_m_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/teamb"
                android:textColor="@color/White"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="@android:color/darker_gray" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_logoB"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/team_logo" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:gravity="center"
                android:paddingBottom="1dp"
                android:text="@string/Score"
                android:textColor="@color/White"
                android:textSize="56sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@drawable/button_shape"
                android:onClick="addTreeforTeamB"
                android:text="@string/three" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/button_shape"
                android:onClick="addTwoforTeamB"
                android:text="@string/two" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/button_shape"
                android:onClick="addOneforTeamB"
                android:text="@string/freeThrow" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="4dp"
            android:background="@drawable/button_shape_reset"
            android:text="@string/reset"
            android:textColor="@color/White" />

    </RelativeLayout>

</LinearLayout>
